# ckanext-xamin

./: MANIFEST.in  README.md  setup.cfg  setup.py  test.ini
.github/workflows/: test.yml
ckanext/xamin/: plugin.py
ckanext/xamin/assets/: script.js  webassets.yml
ckanext/xamin/assets/css/: group.css  organization.css  xamin.css
ckanext/xamin/assets/js/: magic-cursor.js  xamin.js
ckanext/xamin/i18n/el/: info.txt
ckanext/xamin/i18n/el/LC_MESSAGES/: ckan.mo  ckan_new.mo  oldckan.mo  oldckan.po
ckanext/xamin/public/: xamin.css
ckanext/xamin/templates/: base.html  footer.html  header.html  page.html
ckanext/xamin/templates/group/: group-page.html  index.html
ckanext/xamin/templates/group/snippets/: group_title.html  info.html
ckanext/xamin/templates/organization/: index.html  organization-page.html
ckanext/xamin/templates/package/snippets/: info.html
ckanext/xamin/templates/snippets/: cursor.html  facet_list.html  organization.html  package_item.html
ckanext/xamin/templates/user/: dashboard.html
ckanext/xamin/tests/: test_plugin.py
